# aws-lambda-python-sample

./: README.md  cf-template.yml  pyproject.toml
lambda_handler/: fizzbuzz.py  lambda_handler.py
tests/: test_fizzbuzz.py  test_lambda_handler.py
