[tool.poetry]
name = "aws-lambda-python-sample"
version = "0.1.0"
description = ""
authors = ["aocm <aocm.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.2"
pre-commit = "^3.8.0"
black = "^24.8.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
